fixed file paths

--- a/search.html
+++ b/search.html
@@ -1,20 +1,20 @@
 <html>
 	<head>
 		
-		<link rel="stylesheet" href ="/admin/styles/style.css">
-    	<link rel="stylesheet" href="/admin/styles/bootstrap.min.css">
+		<link rel="stylesheet" href ="../admin/styles/style.css">
+    	<link rel="stylesheet" href="../admin/styles/bootstrap.min.css">
 		
 		<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js'></script>
-  		<script src='/admin/app/app.js'></script>
-  		<script src='/admin/app/search.js'></script>
-  		<script src='/admin/app/login.js'></script>
-  		<script src='/admin/app/account.js'></script>
+  		<script src='../admin/app/app.js'></script>
+  		<script src='../admin/app/search.js'></script>
+  		<script src='../admin/app/login.js'></script>
+  		<script src='../admin/app/account.js'></script>
 		
 	</head>
 
 	<body ng-app="GetSearch" ng-controller="SearchController" ng-init="init()">
 		<div style="width:100%;padding:24px;background:#26a9e0;">
-		  <img align="left" style="margin-right:18px" src="/admin/images/logo-white.png" />
+		  <img align="left" style="margin-right:18px" src="../admin/images/logo-white.png" />
 		  <h1 style= "color:#fff">Get</h1>
 		</div>
 	
