--- a/search.html
+++ b/search.html
@@ -16,6 +16,15 @@
 		<div style="width:100%;padding:24px;background:#26a9e0;">
 		  <img align="left" style="margin-right:18px" src="../admin/images/logo-white.png" />
 		  <h1 style= "color:#fff">Get</h1>
+		  <table style="float:right;margin-right:100px;font-size:20px;">
+		  	<tbody>
+		  		<tr>
+		  			<td><a href="login.html">Login</a>&nbsp&nbsp&nbsp</td>
+		  			<td><a href="search.html">Search</a>&nbsp&nbsp&nbsp</td>
+		  			<td><a href="account.html">Account</a>&nbsp&nbsp&nbsp</td>
+		  		</tr>
+		  	</tbody>
+		  </table>
 		</div>
 	
 	
