Changed menu items to white and added padding

--- a/search.html
+++ b/search.html
@@ -14,17 +14,17 @@
 
 	<body ng-app="GetSearch" ng-controller="SearchController" ng-init="init()">
 		<div style="width:100%;padding:24px;background:#26a9e0;">
-		  <img align="left" style="margin-right:18px" src="../admin/images/logo-white.png" />
-		  <h1 style= "color:#fff">Get</h1>
-		  <table style="float:right;margin-right:100px;font-size:20px;">
+		<table style="float:right;margin-right:200px;font-size:20px;margin-top:60px">
 		  	<tbody>
 		  		<tr>
-		  			<td><a href="login.html">Login</a>&nbsp&nbsp&nbsp</td>
-		  			<td><a href="search.html">Search</a>&nbsp&nbsp&nbsp</td>
-		  			<td><a href="account.html">Account</a>&nbsp&nbsp&nbsp</td>
+		  			<td><a href="login.html" style="text-decoration:none;color:white">Login</a>&nbsp&nbsp&nbsp</td>
+		  			<td><a href="search.html" style="text-decoration:none;color:white">Search</a>&nbsp&nbsp&nbsp</td>
+		  			<td><a href="account.html" style="text-decoration:none;color:white">Account</a>&nbsp&nbsp&nbsp</td>
 		  		</tr>
 		  	</tbody>
 		  </table>
+		  <img align="left" style="margin-right:18px" src="../admin/images/logo-white.png" />
+		  <h1 style= "color:#fff">Get</h1>
 		</div>
 	
 	
