Added loading spinner

--- a/account.html
+++ b/account.html
@@ -14,6 +14,7 @@
 
 
 	<body ng-app="GetSearch" ng-controller="AccountController" ng-init="init()">
+	<div spinner spin="loading"></div>
 		<div style="width:100%;padding:24px;background:#26a9e0;">
 		<table style="float:right;margin-right:200px;font-size:20px;margin-top:60px">
 		  	<tbody>
