Added spin and knob files and corresponding imports on each page

--- a/login.html
+++ b/login.html
@@ -9,6 +9,8 @@
   		<script src='../admin/app/search.js'></script>
   		<script src='../admin/app/login.js'></script>
   		<script src='../admin/app/account.js'></script>
+      <script src="/site/js/knob.js"></script>
+      <script src="/site/js/spin.js"></script> 
 		
 	</head>
 
