--- a/search.html
+++ b/search.html
@@ -9,6 +9,7 @@
   		<script src='../admin/app/search.js'></script>
   		<script src='../admin/app/login.js'></script>
   		<script src='../admin/app/account.js'></script>
+  		<script src='../admin/app/cart.js'></script>
   		<script src="../admin/js/jquery.js"></script> 
   		<script src="../admin/js/knob.js"></script>
  		<script src="../admin/js/spin.js"></script>
