Fixed cart fetch access token race condition

--- a/cart.html
+++ b/cart.html
@@ -12,12 +12,12 @@
       <script src='../admin/app/cart.js'></script>
   		<script src="../admin/js/jquery.js"></script> 
   		<script src="../admin/js/knob.js"></script>
- 		<script src="../admin/js/spin.js"></script> 
+ 		  <script src="../admin/js/spin.js"></script> 
 		
 	</head>
 
 
-	<body ng-app="GetSearch" ng-controller="AccountController" ng-init="init()">
+	<body ng-app="GetSearch" ng-controller="CartController" ng-init="init()">
 	<div class="loading-overlay" ng-show="loading">
       <div spinner spin="loading"></div>
     </div>
