Added cart table headers and link to cart

--- a/cart.html
+++ b/cart.html
@@ -2,7 +2,7 @@
 	<head>
 		
 		<link rel="stylesheet" href ="../admin/styles/style.css">
-    	<link rel="stylesheet" href="../admin/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="../admin/styles/bootstrap.min.css">
 		
 		<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js'></script>
   		<script src='../admin/app/app.js'></script>
@@ -20,7 +20,7 @@
 	<body ng-app="GetSearch" ng-controller="CartController" ng-init="init()">
 	<div class="loading-overlay" ng-show="loading">
       <div spinner spin="loading"></div>
-    </div>
+  </div>
 		<div style="width:100%;padding:24px;background:#26a9e0;">
 		<table style="float:right;margin-right:200px;font-size:20px;margin-top:60px">
 		  	<tbody>
@@ -38,7 +38,7 @@
 		
    	 	<div style="padding:24px">
    	 	  <div class="col-md-6">
-            <h2 style="color:#069">Account</h2>
+            <h2 style="color:#069">Cart</h2>
             
             <div style="width:60%">
               <input ng-model="profile.firstName" class="form-control" placeholder="First Name" type="text" /><br />
