--- a/account.html
+++ b/account.html
@@ -60,10 +60,20 @@
             <h2 style="color:#069">Carts</h2>
             
             <table>
-            	<tr ng-repeat="cart in carts track by $index">
-            		<td style="padding:20px 20px 20px 0px">{{ cart.id }}</td>
-            		<td style="padding:20px 20px 20px 0px">{{ cart.status }}</td>
-            	</tr>
+            	<thead>
+            		<tr>
+            			<td>Cart ID #</td>
+            			<td>Cart Status</td>
+            			<td>View Cart</td>
+            		</tr>
+            	</thead>
+	            <tbody>
+	            	<tr ng-repeat="cart in carts track by $index">
+	            		<td style="padding:20px 20px 20px 0px">{{ cart.id }}</td>
+	            		<td style="padding:20px 20px 20px 0px">{{ cart.status }}</td>
+	            		<td style="padding:20px 20px 20px 0px"><a href="/admin/mycarts/{{ cart.id }}">View</a></td>
+	            	</tr>
+	            </tbody>
             </table>
 		    <br /><br />
    	 	  
