Created cart page

--- a/account.html
+++ b/account.html
@@ -71,7 +71,7 @@
 	            	<tr ng-repeat="cart in carts track by $index">
 	            		<td style="padding:20px 40px 20px 0px">{{ cart.id }}</td>
 	            		<td style="padding:20px 40px 20px 0px">{{ cart.status }}</td>
-	            		<td style="padding:20px 40px 20px 0px"><a href="/admin/mycarts/{{ cart.id }}">View</a></td>
+	            		<td style="padding:20px 40px 20px 0px"><a href="/admin/cart/{{ cart.id }}">View</a></td>
 	            	</tr>
 	            </tbody>
             </table>
