Added registerCart function

--- a/cart.html
+++ b/cart.html
@@ -59,7 +59,7 @@
             </div>
             <h4>Total: {{ cart.total }}</h4>
             <div style="width:60%">
-		          <button class="btn" ng-click="checkout()" style="color:#069" >Checkout</button>
+		          <button class="btn" ng-click="registerCart()" style="color:#069" >Step 1</button>
             </div>
 		        <br /><br />
    	 	  </div>
