Added Step 2 button

--- a/cart.html
+++ b/cart.html
@@ -60,6 +60,7 @@
             <h4>Total: {{ cart.total }}</h4>
             <div style="width:60%">
 		          <button class="btn" ng-click="registerCart()" style="color:#069" >Step 1</button>
+              <button class="btn" ng-click="getStatus()" style="color:#069" >Step 2</button>
             </div>
 		        <br /><br />
    	 	  </div>
