started setting up estimate tax & shipping method

--- a/cart.html
+++ b/cart.html
@@ -58,9 +58,10 @@
           </ol>
             </div>
             <h4>Total: {{ cart.total }}</h4>
-            <div style="width:60%">
-		          <button class="btn" ng-click="registerCart()" style="color:#069" >Step 1</button>
-              <button class="btn" ng-click="getStatus()" style="color:#069" >Step 2</button>
+            <div style="width:80%">
+		      <button class="btn" ng-click="registerCart()" style="color:#069" >Register Cart</button>
+              <button class="btn" ng-click="getStatus()" style="color:#069" >Get Status</button>
+              <button class="btn" ng-click="estimateTaxAndShipping()" style="color:#069" >Estimate Tax &amp; Shipping</button>
             </div>
 		        <br /><br />
    	 	  </div>
