Added items to cart

--- a/search.html
+++ b/search.html
@@ -71,7 +71,7 @@
 									<td ng-if="offer.isactive == 1" style= "width:33%" >isActive: YES </td>
 									<td ng-if="offer.isactive == 0" style= "width:33%" >isActive: NO </td>
 						   			<td style="width:33%">Price: ${{offer.price}}</td>
-									<td ng-if="offer.isactive == 1"><button class="btn" style="color:#069" ng-click="addToCart(offer, site)">Add to Cart</button></td>
+									<td ng-if="offer.isactive == 1"><button class="btn" style="color:#069" ng-click="addToCart(offer, site, result)">Add to Cart</button></td>
 						  		</tr>
 							</table>
 							<br /><br />
