--- a/search.html
+++ b/search.html
@@ -90,17 +90,18 @@
    	 	  
    	 	  </div>
    	 	  <div class="col-md-6">
-   	 		<ol>
-			  	<h3>My Cart</h3>
-			  	<li ng-repeat="item in cart['items'] track by $index">
-			  		<strong>{{ item['name'] }}</strong>&nbsp&nbsp&nbsp&nbsp{{ item['price'] }}&nbsp&nbsp&nbsp&nbspSeller:&nbsp{{ item['seller'] }}
-			  		<button class="btn" style="color:#069" ng-clck="delete(item)">Remove</button>
-			  	</li>
-		  	</ol>
+   	 	  	<h3>My Cart</h3>
+   	 	  	<table>
+   	 	  		<tbody>
+   	 	  			<tr ng-repeat="item in cart['items'] track by $index">
+   	 	  				<td><strong>{{ item['name'] }}</strong></td>
+   	 	  				<td>{{ item['price'] }}</td>
+   	 	  				<td>Seller: {{ item['seller'] }}</td>
+   	 	  				<td><button class="btn" style="color:#069" ng-click="delete(item)">Remove</button></td>
+   	 	  			</tr>
+   	 	  		</tbody>
+   	 	  	</table>
 		  </div>
-
         </div>
-
   	</body>
-	
 </html>
