Added padding to table

--- a/cart.html
+++ b/cart.html
@@ -58,7 +58,7 @@
           </ol>
             </div>
             <h4>Total: ${{ cart.total }}</h4>
-            <table ng-repeat="key in keys track by $index">
+            <table ng-repeat="key in keys track by $index" style="padding:15px">
               <tbody>
                 <tr>
                   <td>Key: </td>
